--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.9.2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           publish_dir: ./build 
